--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -16,7 +16,7 @@ div#wall #tag-3.slick.wicked {
   display: none;
 }
 
-#wall .parent div#tag-5.slick {
+div#wall .parent #tag-5.slick {
   display: none;
 }
 
