--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -20,7 +20,7 @@ div#wall .parent div#tag-5.slick {
   display: none;
 }
 
-#wall .parent  #tag-6 {
+div#wall .parent  #tag-6 {
   display: none;
 }
 
